1.0.2-devel
======================

 * Fixed #4590: Subfolders inherit the selected layout of their parent folders
   if they are of the same type.
   https://trac.plone.org/plone/ticket/4590
   [alecm]

 * Fixed #4512 - vCal export was not working with outlook.
   https://trac.plone.org/plone/ticket/4512.
   [hannosch]

 * Use the ControlledMarshaller from the Marshall product if
   available. Fallbacks to existing marshaller.
   [sidnei]

 * Enable __dav_marshall__ by default on ATTopic, ATFolder and
   ATBTreeFolder.
   [sidnei]

 * Fixed #4572 and #4909 - Unicode problems with using kupu together
   with mxTidy
   [hannosch]

 * Fixed #4865 - Spelling error on location criteria.
   [hannosch]

 * On invalid mimetypes the getIcon method of ATFile doesn't throw an exception
   anymore but generates a log entry. This should minimize some migration
   problems or at least tell the exact object with an invalid mimetype.
   This should fix http://plone.org/collector/4979.
   [hannosch]

 * Correct some wrong security settings.
   [hannosch]

 * Code cleanup removing lots of unused import statements.
   [hannosch]

 * Fixed two issues with PathCriterion.  It was using depth 0 to get subfolders,
   the proper parameter is depth -1.  Also, in order to properly handle the
   references it holds, it must itself be cataloged in the UID catalog, and
   have its references cataloged.
   [alecm]

 * Fixed issue causing archetypes schema update to fail due to topic not
   checking syndication state in initializeArchetype.
   [alecm]

 * Added missing alternate views for folderish types.
   [alecm]

1.0.1-final 2005-10-13
======================

 * Fixes for http://plone.org/collector/4709 __bobo_traverse__ doesn't
   need or want a RESPONSE argument.
   [alecm]

 * Fixed http://plone.org/collector/4734 It is generally a bad idea
   to check permissions in bobo_traverse methods, especially permissions
   that don't exist, especially if you then try to raise an exception that