@@ -1,6 +1,9 @@
 1.0.2-devel
 ======================
 
+ * Added And/Or operator to selection criterion.
+   [alecm]
+
  * Fixed #4590: Subfolders inherit the selected layout of their parent folders
    if they are of the same type.
    https://trac.plone.org/plone/ticket/4590
